fixing overflow

--- a/dashboard/static/css/base.css
+++ b/dashboard/static/css/base.css
@@ -3,12 +3,14 @@
 
 html,body{
   font-family: 'Rubik', sans-serif;
-  background:#fdfdfd;
   height: 100%;
   width: 100%;
-  
+  background: rgba(241, 250, 245, 1);
 }
 
+.navbar{
+    background: white;
+}
 
 ::selection {
     color: white;
