--- a/profile_page/static/css/base.css
+++ b/profile_page/static/css/base.css
@@ -2,18 +2,20 @@
 
 
 html,body{
-  font-family: 'Rubik', sans-serif;
-  background:#ffffff;
-  height: 100%;
-  width: 100%;
-  
+    font-family: 'Rubik', sans-serif;
+    height: 100%;
+    width: 100%;
+    background: rgba(241, 250, 245, 1);
 }
 
+.navbar{
+    background: white;
+}
 
 ::selection {
     color: white;
     background: #2AA153;
-  }
+}
 
 
 
